--- a/style.css
+++ b/style.css
@@ -15,6 +15,19 @@ body {
 }
 
 .recipes {
+    list-style-type: none;
     text-align: center;
-    margin: 10px auto;
+    margin: 10px 10px;
+    padding: 10px 10px;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    color: antiquewhite;
+}
+
+a:visited {
+    color: rgb(82, 64, 43);
+}
+
+a:hover {
+    color: rgb(156, 141, 118);
 }
